Fix wrapping issues in DetailedExpense

--- a/client/src/components/dashboard/Stats/Recent/DetailedExpense.css
+++ b/client/src/components/dashboard/Stats/Recent/DetailedExpense.css
@@ -26,6 +26,10 @@
   justify-content: space-between;
 }
 
+.detailed-expense .expense-details .details-left {
+  flex-wrap: wrap;
+}
+
 .detailed-expense .expense-details .details-left .expense-field {
   background-color: #23232e;
   padding: 4px 9px;
@@ -38,6 +42,11 @@
   margin-left: 55px;
   font-size: 20px;
   flex-wrap: nowrap;
+  align-items: center;
+}
+
+.detailed-expense .expense-details .details-right .amount {
+  white-space: nowrap;
 }
 
 .detailed-expense .details-right .delete-expense {
